--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                  KITUTES DONATÊ
+                  PET DELICIA
                 </a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
@@ -42,7 +42,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-heading text-uppercase">Kitutes Donatê</div>
+                <div class="masthead-heading text-uppercase">PET DELICIA</div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://api.whatsapp.com/send?phone=5511976144154&text=Oi%20Danilo%20quero%20comprar%20os%20brigadeiros" target="_blank">Encomendar</a>
             </div>
         </header>
@@ -538,7 +538,7 @@
         </div>
         <style>
           header.masthead{
-            background-image: url(https://claudia.abril.com.br/wp-content/uploads/2020/02/brigadeiro-tradicional-klebercordeiro.jpg);
+            background-image: url(https://www.matilhabrasil.com/wp-content/uploads/2019/08/CAPA-PORQUE-VIRA-LATA-10-MOTIVOS-PARA-TER-UM-EM-SUA-VIDA-970x605.jpg);
           }
         </style>
         <!-- Bootstrap core JS-->
